--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-maven-plugin -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<version>2.6.7</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>mysql</groupId>
